Search functionality - view

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ca_ES.properties
@@ -10,6 +10,7 @@ MOVE=Desplaça
 LOCATE_FILE=Ubica el fitxer
 ADD_FAVORITE=Afegeix-ho a Preferits
 FAVORITES=Preferits
+SEARCH=Cerca
 FILTERS=Filtres
 NEW=Nou
 RESET=Reinicialitza
