--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_de_DE.properties
@@ -10,6 +10,7 @@ MOVE=Verschieben
 LOCATE_FILE=Datei lokalisieren
 ADD_FAVORITE=Zu Favoriten hinzufügen
 FAVORITES=Favoriten
+SEARCH=Suchen
 FILTERS=Filter
 NEW=Neu
 RESET=Zurücksetzen
