--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_en_US.properties
@@ -10,6 +10,7 @@ MOVE=Move
 LOCATE_FILE=Locate File
 ADD_FAVORITE=Add to Favorites
 FAVORITES=Favorites
+SEARCH=Search
 FILTERS=Filters
 NEW=New
 RESET=Reset
