--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_es_ES.properties
@@ -10,6 +10,7 @@ MOVE=Mover
 LOCATE_FILE=Ubicar archivo
 ADD_FAVORITE=Agregar a Favoritos
 FAVORITES=Favoritos
+SEARCH=Buscar
 FILTERS=Filtros
 NEW=Nuevo
 RESET=Restablecer
