--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fi_FI.properties
@@ -10,6 +10,7 @@ MOVE=Siirr‰
 LOCATE_FILE=Paikanna tiedosto
 ADD_FAVORITE=Lis‰‰ suosikkeihin
 FAVORITES=Suosikit
+SEARCH=Haku
 FILTERS=Suodattimet
 NEW=Uusi
 RESET=Palauta
