--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fr_FR.properties
@@ -10,6 +10,7 @@ MOVE=Déplacer
 LOCATE_FILE=Repérer le fichier
 ADD_FAVORITE=Ajouter aux favoris
 FAVORITES=Favoris
+SEARCH=Chercher
 FILTERS=Filtres
 NEW=Nouveau
 RESET=Réinitialiser
