--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_it_IT.properties
@@ -10,6 +10,7 @@ MOVE=Muovi
 LOCATE_FILE=Individua file
 ADD_FAVORITE=Aggiungi a Preferiti
 FAVORITES=Preferiti
+SEARCH=Cerca
 FILTERS=Filtri
 NEW=Nuovo
 RESET=Reimposta
