--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ja_JP.properties
@@ -10,6 +10,7 @@ MOVE=\u79FB\u52D5
 LOCATE_FILE=\u30D5\u30A1\u30A4\u30EB\u306E\u691C\u7D22
 ADD_FAVORITE=\u304A\u6C17\u306B\u5165\u308A\u306B\u8FFD\u52A0
 FAVORITES=\u304A\u6C17\u306B\u5165\u308A
+SEARCH=\u691C\u7D22
 FILTERS=\u30D5\u30A3\u30EB\u30BF
 NEW=\u65B0\u898F
 RESET=\u30EA\u30BB\u30C3\u30C8
