--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ko_KR.properties
@@ -10,6 +10,7 @@ MOVE=\uC774\uB3D9
 LOCATE_FILE=\uD30C\uC77C \uCC3E\uAE30
 ADD_FAVORITE=\uC990\uACA8\uCC3E\uAE30\uC5D0 \uCD94\uAC00
 FAVORITES=\uC990\uACA8\uCC3E\uAE30
+SEARCH=\uAC80\uC0C9
 FILTERS=\uD544\uD130
 NEW=\uC2E0\uADDC
 RESET=\uB2E4\uC2DC \uC124\uC815
