--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_nl_NL.properties
@@ -10,6 +10,7 @@ MOVE=Verplaatsen
 LOCATE_FILE=Bestand lokaliseren
 ADD_FAVORITE=Toevoegen aan Favorieten
 FAVORITES=Favorieten
+SEARCH=Zoeken
 FILTERS=Filters
 NEW=Nieuw
 RESET=Beginwaarden
