--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pt_BR.properties
@@ -10,6 +10,7 @@ MOVE=Mover
 LOCATE_FILE=Localizar o arquivo
 ADD_FAVORITE=Adicionar aos favoritos
 FAVORITES=Favoritos
+SEARCH=Pesquisar
 FILTERS=Filtros
 NEW=Novo
 RESET=Redefinir
