--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_sv_SE.properties
@@ -10,6 +10,7 @@ MOVE=Flytta
 LOCATE_FILE=Välj fil
 ADD_FAVORITE=Lägg till i Favoriter
 FAVORITES=Favoriter
+SEARCH=Sök
 FILTERS=Filter
 NEW=Nya
 RESET=Återställ
