--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_CN.properties
@@ -10,6 +10,7 @@ MOVE=\u79FB\u52A8
 LOCATE_FILE=\u67E5\u627E\u6587\u4EF6
 ADD_FAVORITE=\u6DFB\u52A0\u5230\u6536\u85CF\u5939
 FAVORITES=\u6536\u85CF\u5939
+SEARCH=\u641C\u7D22
 FILTERS=\u6EE4\u955C
 NEW=\u65B0
 RESET=\u91CD\u7F6E
