--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_TW.properties
@@ -10,6 +10,7 @@ MOVE=\u79FB\u52D5
 LOCATE_FILE=\u627E\u51FA\u6A94\u6848\u4F4D\u7F6E
 ADD_FAVORITE=\u65B0\u589E\u81F3\u6211\u7684\u6700\u611B
 FAVORITES=\u6211\u7684\u6700\u611B
+SEARCH=\u641C\u5C0B
 FILTERS=\u7BE9\u9078
 NEW=\u65B0\u589E
 RESET=\u91CD\u8A2D
