first cut of the press-ctrl-shift-while boot feature. todo: more testing, another round of code review and translations

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ar_KW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ar_KW.properties
@@ -5,3 +5,8 @@ ROM_B=\u0631\u0648\u0645 B
 EXTENSION=\u0645\u0644\u062D\u0642
 DISK_A=\u0642\u0631\u0635 A
 DISK_B=\u0642\u0631\u0635 B
+
+FDD_MODE=FDD Mode
+ENABLE_BOTH=Enable Both Drives
+DISABLE_SECOND=Disable Secondary Drive
+DISABLE_BOTH=Disable Both Drives
