--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ja_JP.properties
@@ -5,3 +5,8 @@ ROM_B=\u30ED\u30E0 B
 EXTENSION=\u62E1\u5F35\u6A5F\u80FD
 DISK_A=\u30C7\u30A3\u30B9\u30AF A
 DISK_B=\u30C7\u30A3\u30B9\u30AF B
+
+FDD_MODE=FDD Mode
+ENABLE_BOTH=Enable Both Drives
+DISABLE_SECOND=Disable Secondary Drive
+DISABLE_BOTH=Disable Both Drives
