--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_nl_NL.properties
@@ -5,3 +5,8 @@ ROM_B=ROM B
 EXTENSION=Extensie
 DISK_A=Schijf A
 DISK_B=Schijf B
+
+FDD_MODE=FDD Mode
+ENABLE_BOTH=Enable Both Drives
+DISABLE_SECOND=Disable Secondary Drive
+DISABLE_BOTH=Disable Both Drives
