--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ru_RU.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ru_RU.properties
@@ -5,3 +5,8 @@ ROM_B=Rom 2
 EXTENSION=\u0420\u0430\u0441\u0448\u0438\u0440\u0435\u043D\u0438\u0435
 DISK_A=\u0414\u0438\u0441\u043A 1
 DISK_B=\u0414\u0438\u0441\u043A 2
+
+FDD_MODE=FDD Mode
+ENABLE_BOTH=Enable Both Drives
+DISABLE_SECOND=Disable Secondary Drive
+DISABLE_BOTH=Disable Both Drives
