--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_zh_TW.properties
@@ -5,3 +5,8 @@ ROM_B=ROM 2
 EXTENSION=Extension
 DISK_A=\u78C1\u789F 1
 DISK_B=\u78C1\u789F 2
+
+FDD_MODE=FDD Mode
+ENABLE_BOTH=Enable Both Drives
+DISABLE_SECOND=Disable Secondary Drive
+DISABLE_BOTH=Disable Both Drives
