--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ca_ES.properties
@@ -5,3 +5,8 @@ ROM_B=ROM B
 EXTENSION=Extensió
 DISK_A=Disc A
 DISK_B=Disc B
+
+FDD_MODE=FDD Mode
+ENABLE_BOTH=Enable Both Drives
+DISABLE_SECOND=Disable Secondary Drive
+DISABLE_BOTH=Disable Both Drives
