--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fa_IR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fa_IR.properties
@@ -5,3 +5,8 @@ ROM_B=\u0631\u0627\u0645 B
 EXTENSION=\u067E\u0633\u0648\u0646\u062F
 DISK_A=\u062F\u06CC\u0633\u06A9 A
 DISK_B=\u062F\u06CC\u0633\u06A9 B
+
+FDD_MODE=FDD Mode
+ENABLE_BOTH=Enable Both Drives
+DISABLE_SECOND=Disable Secondary Drive
+DISABLE_BOTH=Disable Both Drives
