--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fr_FR.properties
@@ -5,3 +5,8 @@ ROM_B=ROM B
 EXTENSION=Extension
 DISK_A=Disque A
 DISK_B=Disque B
+
+FDD_MODE=FDD Mode
+ENABLE_BOTH=Enable Both Drives
+DISABLE_SECOND=Disable Secondary Drive
+DISABLE_BOTH=Disable Both Drives
