--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ko_KR.properties
@@ -5,3 +5,8 @@ ROM_B=\uB86C B
 EXTENSION=\uD655\uC7A5\uBA85
 DISK_A=\uB514\uC2A4\uD06C A
 DISK_B=\uB514\uC2A4\uD06C B
+
+FDD_MODE=FDD Mode
+ENABLE_BOTH=Enable Both Drives
+DISABLE_SECOND=Disable Secondary Drive
+DISABLE_BOTH=Disable Both Drives
