added ability to disable second or both floppy drives per game

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ca_ES.properties
@@ -6,7 +6,7 @@ EXTENSION=Extensió
 DISK_A=Disc A
 DISK_B=Disc B
 
-FDD_MODE=FDD Mode
-ENABLE_BOTH=Enable Both Drives
-DISABLE_SECOND=Disable Secondary Drive
-DISABLE_BOTH=Disable Both Drives
+CONFIGURATION=Configuració
+ENABLE_BOTH=Habilita ambdues unitats de disquet
+DISABLE_SECOND=Inhabilita la segona unitat de disquet
+DISABLE_BOTH=Inhabilita ambdues unitats de disquet
