--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_en_US.properties
@@ -6,7 +6,7 @@ EXTENSION=Extension
 DISK_A=Disk A
 DISK_B=Disk B
 
-FDD_MODE=FDD Mode
+CONFIGURATION=Configuration
 ENABLE_BOTH=Enable Both Drives
-DISABLE_SECOND=Disable Secondary Drive
+DISABLE_SECOND=Disable Second Drive
 DISABLE_BOTH=Disable Both Drives
