--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_es_ES.properties
@@ -6,7 +6,7 @@ EXTENSION=Extensión
 DISK_A=Disco A
 DISK_B=Disco B
 
-FDD_MODE=FDD Mode
-ENABLE_BOTH=Enable Both Drives
-DISABLE_SECOND=Disable Secondary Drive
-DISABLE_BOTH=Disable Both Drives
+CONFIGURATION=Configuración
+ENABLE_BOTH=Habilitar ambas disqueteras
+DISABLE_SECOND=Deshabilitar la segunda disquetera
+DISABLE_BOTH=Deshabilitar ambas disqueteras
