--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fi_FI.properties
@@ -6,7 +6,7 @@ EXTENSION=Laajennus
 DISK_A=Levy A
 DISK_B=Levy B
 
-FDD_MODE=FDD Mode
-ENABLE_BOTH=Enable Both Drives
-DISABLE_SECOND=Disable Secondary Drive
-DISABLE_BOTH=Disable Both Drives
+CONFIGURATION=Kokoonpano
+ENABLE_BOTH=Ota käyttöön molemmat levykeasemat
+DISABLE_SECOND=Poista käytöstä toinen levykeasema
+DISABLE_BOTH=Poista käytöstä molemmat levykeasemat
