--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ja_JP.properties
@@ -6,7 +6,7 @@ EXTENSION=\u62E1\u5F35\u6A5F\u80FD
 DISK_A=\u30C7\u30A3\u30B9\u30AF A
 DISK_B=\u30C7\u30A3\u30B9\u30AF B
 
-FDD_MODE=FDD Mode
-ENABLE_BOTH=Enable Both Drives
-DISABLE_SECOND=Disable Secondary Drive
-DISABLE_BOTH=Disable Both Drives
+CONFIGURATION=\u69CB\u6210
+ENABLE_BOTH=\u30D5\u30ED\u30C3\u30D4\u30FC\u30C7\u30A3\u30B9\u30AF\u30C9\u30E9\u30A4\u30D6\u306E\u4E21\u65B9\u6709\u52B9\u306B\u3059\u308B
+DISABLE_SECOND=\u7B2C\u4E8C\u306E\u30D5\u30ED\u30C3\u30D4\u30FC\u30C7\u30A3\u30B9\u30AF\u30C9\u30E9\u30A4\u30D6\u7121\u52B9\u306B\u3059\u308B
+DISABLE_BOTH=\u30D5\u30ED\u30C3\u30D4\u30FC\u30C7\u30A3\u30B9\u30AF\u30C9\u30E9\u30A4\u30D6\u306E\u4E21\u65B9\u7121\u52B9\u306B\u3059\u308B
