--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ko_KR.properties
@@ -6,7 +6,7 @@ EXTENSION=\uD655\uC7A5\uBA85
 DISK_A=\uB514\uC2A4\uD06C A
 DISK_B=\uB514\uC2A4\uD06C B
 
-FDD_MODE=FDD Mode
-ENABLE_BOTH=Enable Both Drives
-DISABLE_SECOND=Disable Secondary Drive
-DISABLE_BOTH=Disable Both Drives
+CONFIGURATION=\uAD6C\uC131
+ENABLE_BOTH=\uD50C\uB85C\uD53C \uB514\uC2A4\uD06C \uB4DC\uB77C\uC774\uBE0C\uB97C \uBAA8\uB450 \uC0AC\uC6A9
+DISABLE_SECOND=\uB450 \uBC88\uC9F8 \uD50C\uB85C\uD53C \uB514\uC2A4\uD06C \uB4DC\uB77C\uC774\uBE0C \uC0AC\uC6A9 \uC548 \uD568
+DISABLE_BOTH=\uD50C\uB85C\uD53C \uB514\uC2A4\uD06C \uB4DC\uB77C\uC774\uBE0C\uB97C \uBAA8\uB450 \uC0AC\uC6A9 \uC548 \uD568
