--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_pt_BR.properties
@@ -6,7 +6,7 @@ EXTENSION=Extensão
 DISK_A=Disco A
 DISK_B=Disco B
 
-FDD_MODE=FDD Mode
-ENABLE_BOTH=Enable Both Drives
-DISABLE_SECOND=Disable Secondary Drive
-DISABLE_BOTH=Disable Both Drives
+CONFIGURATION=Configuração
+ENABLE_BOTH=Habilitar ambas as unidades de disco
+DISABLE_SECOND=Desabilitar a segunda unidade de disco
+DISABLE_BOTH=Desabilitar ambas as unidades de disco
