--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_sv_SE.properties
@@ -6,7 +6,7 @@ EXTENSION=Anknytning
 DISK_A=Disk A
 DISK_B=Disk B
 
-FDD_MODE=FDD Mode
-ENABLE_BOTH=Enable Both Drives
-DISABLE_SECOND=Disable Secondary Drive
-DISABLE_BOTH=Disable Both Drives
+CONFIGURATION=Konfiguration
+ENABLE_BOTH=Aktivera båda diskettenheter
+DISABLE_SECOND=Inaktivera andra diskettenhet
+DISABLE_BOTH=Inaktivera bådad diskettenheter
