--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ar_KW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_ar_KW.properties
@@ -6,7 +6,7 @@ EXTENSION=\u0645\u0644\u062D\u0642
 DISK_A=\u0642\u0631\u0635 A
 DISK_B=\u0642\u0631\u0635 B
 
-FDD_MODE=FDD Mode
-ENABLE_BOTH=Enable Both Drives
-DISABLE_SECOND=Disable Secondary Drive
-DISABLE_BOTH=Disable Both Drives
+CONFIGURATION=\u0627\u0644\u062A\u0643\u0648\u064A\u0646
+ENABLE_BOTH=\u062A\u0645\u0643\u064A\u0646 \u0643\u0644\u0627 \u0645\u062D\u0631\u0643\u0627\u062A \u0627\u0644\u0623\u0642\u0631\u0627\u0635
+DISABLE_SECOND=\u062A\u0639\u0637\u064A\u0644 \u0645\u062D\u0631\u0643 \u0627\u0644\u0623\u0642\u0631\u0627\u0635 \u0627\u0644\u062B\u0627\u0646\u064A
+DISABLE_BOTH=\u062A\u0639\u0637\u064A\u0644 \u0643\u0644\u0627 \u0645\u062D\u0631\u0643\u0627\u062A \u0627\u0644\u0623\u0642\u0631\u0627\u0635
