--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_de_DE.properties
@@ -6,7 +6,7 @@ EXTENSION=Erweiterung
 DISK_A=Disk A
 DISK_B=Disk B
 
-FDD_MODE=FDD Mode
-ENABLE_BOTH=Enable Both Drives
-DISABLE_SECOND=Disable Secondary Drive
-DISABLE_BOTH=Disable Both Drives
+CONFIGURATION=Konfiguration
+ENABLE_BOTH=Beide Diskettenlaufwerke aktivieren
+DISABLE_SECOND=Die zweite Diskettenlaufwerk deaktivieren
+DISABLE_BOTH=Beide Diskettenlaufwerke deaktivieren
