--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fa_IR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fa_IR.properties
@@ -6,7 +6,7 @@ EXTENSION=\u067E\u0633\u0648\u0646\u062F
 DISK_A=\u062F\u06CC\u0633\u06A9 A
 DISK_B=\u062F\u06CC\u0633\u06A9 B
 
-FDD_MODE=FDD Mode
-ENABLE_BOTH=Enable Both Drives
-DISABLE_SECOND=Disable Secondary Drive
-DISABLE_BOTH=Disable Both Drives
+CONFIGURATION=\u067E\u064A\u0643\u0631\u0628\u0646\u062F\u064A
+ENABLE_BOTH=\u0641\u0639\u0627\u0644 \u06A9\u0631\u062F\u0646 \u0647\u0631 \u062F\u0648 \u062F\u0631\u0627\u06CC\u0648\u0647\u0627\u06CC \u062F\u06CC\u0633\u06A9 \u0641\u0644\u0627\u067E\u06CC
+DISABLE_SECOND=\u063A\u06CC\u0631\u0641\u0639\u0627\u0644 \u06A9\u0631\u062F\u0646 \u062F\u0631\u0627\u06CC\u0648 \u062F\u06CC\u0633\u06A9 \u0641\u0644\u0627\u067E\u06CC \u062F\u0648\u0645
+DISABLE_BOTH=\u063A\u06CC\u0631\u0641\u0639\u0627\u0644 \u06A9\u0631\u062F\u0646 \u0647\u0631 \u062F\u0648 \u062F\u0631\u0627\u06CC\u0648\u0647\u0627\u06CC \u062F\u06CC\u0633\u06A9 \u0641\u0644\u0627\u067E\u06CC
