--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_fr_FR.properties
@@ -6,7 +6,7 @@ EXTENSION=Extension
 DISK_A=Disque A
 DISK_B=Disque B
 
-FDD_MODE=FDD Mode
-ENABLE_BOTH=Enable Both Drives
-DISABLE_SECOND=Disable Secondary Drive
-DISABLE_BOTH=Disable Both Drives
+CONFIGURATION=Configuration
+ENABLE_BOTH=Activer les deux lecteurs de disquette
+DISABLE_SECOND=Désactiver le deuxième lecteur de disquette
+DISABLE_BOTH=Désactiver les deux lecteurs de disquette
