--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_it_IT.properties
@@ -6,7 +6,7 @@ EXTENSION=Estensione
 DISK_A=Disco A
 DISK_B=Disco B
 
-FDD_MODE=FDD Mode
-ENABLE_BOTH=Enable Both Drives
-DISABLE_SECOND=Disable Secondary Drive
-DISABLE_BOTH=Disable Both Drives
+CONFIGURATION=Configurazione
+ENABLE_BOTH=Abilita entrambe le unità floppy
+DISABLE_SECOND=Disabilita la seconda unità floppy
+DISABLE_BOTH=Disabilita entrambe le unità floppy
