--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_nl_NL.properties
@@ -6,7 +6,7 @@ EXTENSION=Extensie
 DISK_A=Schijf A
 DISK_B=Schijf B
 
-FDD_MODE=FDD Mode
-ENABLE_BOTH=Enable Both Drives
-DISABLE_SECOND=Disable Secondary Drive
-DISABLE_BOTH=Disable Both Drives
+CONFIGURATION=Configuratie
+ENABLE_BOTH=Beide diskettestations inschakelen
+DISABLE_SECOND=De tweede diskettestation uitschakelen
+DISABLE_BOTH=Beide diskettestations uitschakelen
