--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_zh_CN.properties
@@ -6,7 +6,7 @@ EXTENSION=\u6269\u5C55
 DISK_A=\u78C1\u76D8 1
 DISK_B=\u78C1\u76D8 2
 
-FDD_MODE=FDD Mode
-ENABLE_BOTH=Enable Both Drives
-DISABLE_SECOND=Disable Secondary Drive
-DISABLE_BOTH=Disable Both Drives
+CONFIGURATION=\u914D\u7F6E
+ENABLE_BOTH=\u542F\u7528\u8FD9\u4E24\u4E2A\u8F6F\u76D8\u9A71\u52A8\u5668
+DISABLE_SECOND=\u7981\u7528\u7B2C\u4E8C\u4E2A\u8F6F\u76D8\u9A71\u52A8\u5668
+DISABLE_BOTH=\u7981\u7528\u8FD9\u4E24\u4E2A\u8F6F\u76D8\u9A71\u52A8\u5668
