--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/AddEditGameWindow_zh_TW.properties
@@ -6,7 +6,7 @@ EXTENSION=Extension
 DISK_A=\u78C1\u789F 1
 DISK_B=\u78C1\u789F 2
 
-FDD_MODE=FDD Mode
-ENABLE_BOTH=Enable Both Drives
-DISABLE_SECOND=Disable Secondary Drive
-DISABLE_BOTH=Disable Both Drives
+CONFIGURATION=\u7D44\u614B
+ENABLE_BOTH=\u555F\u7528\u9019\u5169\u500B\u8EDF\u76E4\u9A45\u52D5\u5668
+DISABLE_SECOND=\u7981\u7528\u7B2C\u4E8C\u500B\u8EDF\u76E4\u9A45\u52D5\u5668
+DISABLE_BOTH=\u7981\u7528\u9019\u5169\u500B\u8EDF\u76E4\u9A45\u52D5\u5668
