added Polish language

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_de_DE.properties
@@ -14,6 +14,7 @@ ITALIAN=Italienisch
 JAPANESE=Japanisch
 KOREAN=Koreanisch
 PERSIAN=Persisch
+POLISH=Polnische
 PORTUGUESE=Portugiesisch
 RUSSIAN=Russisch
 SPANISH=Spanisch
