--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_en_US.properties
@@ -14,6 +14,7 @@ ITALIAN=Italian
 JAPANESE=Japanese
 KOREAN=Korean
 PERSIAN=Persian
+POLISH=Polish
 PORTUGUESE=Portuguese
 RUSSIAN=Russian
 SPANISH=Spanish
