--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_it_IT.properties
@@ -14,6 +14,7 @@ ITALIAN=Italiano
 JAPANESE=Giapponese
 KOREAN=Coreano
 PERSIAN=Persiano
+POLISH=Polacco
 PORTUGUESE=Portoghese
 RUSSIAN=Russo
 SPANISH=Spagnolo
