--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_ja_JP.properties
@@ -14,6 +14,7 @@ ITALIAN=\u30A4\u30BF\u30EA\u30A2\u8A9E
 JAPANESE=\u65E5\u672C\u8A9E
 KOREAN=\u97D3\u56FD\u8A9E
 PERSIAN=\u30DA\u30EB\u30B7\u30E3\u8A9E
+POLISH=\u30DD\u30FC\u30E9\u30F3\u30C9\u8A9E
 PORTUGUESE=\u30DD\u30EB\u30C8\u30AC\u30EB\u8A9E
 RUSSIAN=\u30ED\u30B7\u30A2\u8A9E
 SPANISH=\u30B9\u30DA\u30A4\u30F3\u8A9E
