--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_ko_KR.properties
@@ -14,6 +14,7 @@ ITALIAN=\uC774\uD0C8\uB9AC\uC544\uC5B4
 JAPANESE=\uC77C\uBCF8\uC5B4
 KOREAN=\uD55C\uAD6D\uC5B4
 PERSIAN=\uC774\uB780\uC5B4
+POLISH=\uD3F4\uB780\uB4DC\uC5B4
 PORTUGUESE=\uD3EC\uB974\uD22C\uAC08\uC5B4
 RUSSIAN=\uB7EC\uC2DC\uC544\uC5B4
 SPANISH=\uC2A4\uD398\uC778\uC5B4
