--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_nl_NL.properties
@@ -14,6 +14,7 @@ ITALIAN=Italiaans
 JAPANESE=Japans
 KOREAN=Koreaans
 PERSIAN=Perzisch
+POLISH=Pools
 PORTUGUESE=Portugees
 RUSSIAN=Russisch
 SPANISH=Spaans
