--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_zh_CN.properties
@@ -14,6 +14,7 @@ ITALIAN=\u610F\u5927\u5229
 JAPANESE=\u65E5\u672C
 KOREAN=\u97E9\u56FD
 PERSIAN=\u6CE2\u65AF\u8BED
+POLISH=\u6CE2\u5170\u8BED
 PORTUGUESE=\u8461\u8404\u7259
 RUSSIAN=\u4FC4\u8BED
 SPANISH=\u897F\u73ED\u7259
