--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_zh_TW.properties
@@ -14,6 +14,7 @@ ITALIAN=\u7FA9\u5927\u5229\u6587
 JAPANESE=\u65E5\u6587
 KOREAN=\u97D3\u6587
 PERSIAN=\u6CE2\u65AF\u6587
+POLISH=\u6CE2\u862D\u6587
 PORTUGUESE=\u8461\u8404\u7259\u6587
 RUSSIAN=\u4FC4\u6587
 SPANISH=\u897F\u73ED\u7259\u6587
