--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_es_ES.properties
@@ -14,6 +14,7 @@ ITALIAN=Italiano
 JAPANESE=Japonés
 KOREAN=Coreano
 PERSIAN=Persa
+POLISH=Polaco
 PORTUGUESE=Portugués
 RUSSIAN=Ruso
 SPANISH=Español
