--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_fa_IR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_fa_IR.properties
@@ -14,6 +14,7 @@ ITALIAN=\u0627\u06CC\u062A\u0627\u0644\u06CC\u0627\u06CC\u06CC
 JAPANESE=\u0698\u0627\u067E\u0646\u06CC
 KOREAN=\u06A9\u0631\u0647 \u0627\u06CC
 PERSIAN=\u0641\u0627\u0631\u0633\u06CC
+POLISH=\u0644\u0647\u0633\u062A\u0627\u0646\u06CC
 PORTUGUESE=\u067E\u0631\u062A\u063A\u0627\u0644\u06CC
 RUSSIAN=\u0631\u0648\u0633\u06CC
 SPANISH=\u0627\u0633\u067E\u0627\u0646\u06CC\u0627\u06CC\u06CC
