--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_fr_FR.properties
@@ -14,6 +14,7 @@ ITALIAN=Italien
 JAPANESE=Japonais
 KOREAN=Coréen
 PERSIAN=Perse
+POLISH=Polonais
 PORTUGUESE=Portugais
 RUSSIAN=Russe
 SPANISH=Espagnol
