--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_pt_BR.properties
@@ -14,6 +14,7 @@ ITALIAN=Italiano
 JAPANESE=Japonês
 KOREAN=Coreano
 PERSIAN=Persa
+POLISH=Polonês
 PORTUGUESE=Português
 RUSSIAN=Russo
 SPANISH=Espanhol
