--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_sv_SE.properties
@@ -14,6 +14,7 @@ ITALIAN=Italienska
 JAPANESE=Japanska
 KOREAN=Koreanska
 PERSIAN=Persiska
+POLISH=Polska
 PORTUGUESE=Portugisiska
 RUSSIAN=Ryska
 SPANISH=Spanska
