added IPS patching feature

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ca_ES.properties
@@ -63,6 +63,8 @@ BACKUPS=Còpies de seguretat
 DELETE_CONFIRMATION=Suprimeix?
 ACTIVITY_VIEWER=Visualitzador d'activitats
 ACTIVITY_VIEWER_MNEMONIC=V
+PATCH_CENTER=Centre de pedaç
+PATCH_CENTER_MNEMONIC=C
 COUNT=Total
 
 BR=Brasil
@@ -97,7 +99,12 @@ ERR_GAME_WITH_NULL_NAME=Nom del joc no pot estar buit
 ERR_INVALID_MACHINES_DIRECTORY=Carpeta de màquines no és vàlida
 ERR_CANNOT_VIEW_GAMEINFO=S'ha produït un error en visualitzar les dades del joc
 ERR_CANNOT_VIEW_HELP_FILE=S'ha produït un error en visualitzar el fitxer d'ajuda
-ERR_CANNOT_LOCATE_FILE=S'ha produït un error en ubicar el fitxer del joc
+ERR_CANNOT_LOCATE_FILE=S'ha produït un error en ubicar el fitxer
 ERR_FILTER_ALREADY_EXISTS=Nom de filtres ja existeix
 ERR_CANNOT_CONTACT_SERVER=No es pot establir contacte amb el servido
 ERR_CANNOT_INSTALL_NEW_UPDATED_FILES=S'ha produït un error en instal·lar
+ERR_INVALID_PATCH_FILE=Fitxer de pedaç no vàlid
+ERR_FILE_TO_PATCH_NOT_PATCHABLE=No s'ha pogut aplicar el pedaç al fitxer
+ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Suma de comprovació incorrecta
+ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=El fitxer comprimit no pot ser pedaç directament. Especifiqueu un fitxer de destinació
+ERR_EMPTY_CHECKSUM=Suma de comprovació no pot estar buida
