--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_en_US.properties
@@ -63,6 +63,8 @@ BACKUPS=Backups
 DELETE_CONFIRMATION=Delete?
 ACTIVITY_VIEWER=Activity Viewer
 ACTIVITY_VIEWER_MNEMONIC=A
+PATCH_CENTER=Patch Center
+PATCH_CENTER_MNEMONIC=P
 COUNT=Total
 
 BR=Brazil
@@ -97,7 +99,12 @@ ERR_GAME_WITH_NULL_NAME=Game name cannot be empty
 ERR_INVALID_MACHINES_DIRECTORY=Invalid machines directory
 ERR_CANNOT_VIEW_GAMEINFO=Cannot view game info
 ERR_CANNOT_VIEW_HELP_FILE=Cannot view help file
-ERR_CANNOT_LOCATE_FILE=Cannot locate game file
+ERR_CANNOT_LOCATE_FILE=Cannot locate file
 ERR_FILTER_ALREADY_EXISTS=Filter set name already exists
 ERR_CANNOT_CONTACT_SERVER=Cannot contact the server
 ERR_CANNOT_INSTALL_NEW_UPDATED_FILES=Installation failed
+ERR_INVALID_PATCH_FILE=Patch file is invalid
+ERR_FILE_TO_PATCH_NOT_PATCHABLE=File cannot be patched
+ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Checksum of the source file doesn't match the given checksum
+ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=Compressed source file cannot be patched directly. Specify a target file
+ERR_EMPTY_CHECKSUM=Checksum field cannot be empty
