--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_es_ES.properties
@@ -63,6 +63,8 @@ BACKUPS=Copias de seguridad
 DELETE_CONFIRMATION=¿Eliminar?
 ACTIVITY_VIEWER=Visor de actividades
 ACTIVITY_VIEWER_MNEMONIC=V
+PATCH_CENTER=Centro de parche
+PATCH_CENTER_MNEMONIC=C
 COUNT=Total
 
 BR=Brasil
@@ -97,7 +99,12 @@ ERR_GAME_WITH_NULL_NAME=Nombre del juego no puede estar vacío
 ERR_INVALID_MACHINES_DIRECTORY=Carpeta de máquinas no es válida
 ERR_CANNOT_VIEW_GAMEINFO=Error al ver los datos del juego
 ERR_CANNOT_VIEW_HELP_FILE=Error al ver el archivo de ayuda
-ERR_CANNOT_LOCATE_FILE=Error al ubicar el archivo del juego
+ERR_CANNOT_LOCATE_FILE=Error al ubicar el archivo
 ERR_FILTER_ALREADY_EXISTS=Nombre de filtros ya existe
 ERR_CANNOT_CONTACT_SERVER=No se puede establecer contacto con el servidor
 ERR_CANNOT_INSTALL_NEW_UPDATED_FILES=Error de instalación
+ERR_INVALID_PATCH_FILE=Archivo de parche no válido
+ERR_FILE_TO_PATCH_NOT_PATCHABLE=No se puede aplicar el parche al archivo
+ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Suma de comprobación incorrecta
+ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=El archivo comprimido no se puede parchear directamente. Especifique un archivo de destino
+ERR_EMPTY_CHECKSUM=Suma de comprobación no puede estar vacía
