--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fi_FI.properties
@@ -63,6 +63,8 @@ BACKUPS=Varmuuskopiot
 DELETE_CONFIRMATION=Poista?
 ACTIVITY_VIEWER=Käytön katseluohjelma
 ACTIVITY_VIEWER_MNEMONIC=K
+PATCH_CENTER=Patch keskus
+PATCH_CENTER_MNEMONIC=P
 COUNT=Summa
 
 BR=Brasilia
@@ -97,7 +99,12 @@ ERR_GAME_WITH_NULL_NAME=Pelin nimi ei voi olla tyhjä
 ERR_INVALID_MACHINES_DIRECTORY=Koneet kansio ei kelpaa
 ERR_CANNOT_VIEW_GAMEINFO=Virhe näytettäessä pelin tiedot
 ERR_CANNOT_VIEW_HELP_FILE=Virhe luettaessa ohjetiedostoa
-ERR_CANNOT_LOCATE_FILE=Virhe paikallistamiseen peli tiedosto
+ERR_CANNOT_LOCATE_FILE=Tiedostoa ei löydy
 ERR_FILTER_ALREADY_EXISTS=Nimi suodattimet jo olemassa
 ERR_CANNOT_CONTACT_SERVER=Palvelimeen ei saada yhteyttä
 ERR_CANNOT_INSTALL_NEW_UPDATED_FILES=Asennus epäonnistui
+ERR_INVALID_PATCH_FILE=Virheellinen korjaustiedostoa
+ERR_FILE_TO_PATCH_NOT_PATCHABLE=Tiedostoa ei voi paikata
+ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Virheellinen tarkistussumma
+ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=Pakattu tiedosto ei voi paikata suoraan. Määritä kohdetiedosto
+ERR_EMPTY_CHECKSUM=Tarkistussumma ei voi olla tyhjä
