--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fr_FR.properties
@@ -63,6 +63,8 @@ BACKUPS=Sauvegardes
 DELETE_CONFIRMATION=Supprimer?
 ACTIVITY_VIEWER=Visionneuse d'activité
 ACTIVITY_VIEWER_MNEMONIC=V
+PATCH_CENTER=Centre de correctif
+PATCH_CENTER_MNEMONIC=C
 COUNT=Total
 
 BR=Brésil
@@ -97,7 +99,12 @@ ERR_GAME_WITH_NULL_NAME=Le nom du jeu ne peut pas être vide
 ERR_INVALID_MACHINES_DIRECTORY=Dossier de machines est invalide
 ERR_CANNOT_VIEW_GAMEINFO=Erreur lors d'affichage des données de jeu
 ERR_CANNOT_VIEW_HELP_FILE=Impossible d'afficher le fichier d'aide
-ERR_CANNOT_LOCATE_FILE=Impossible de localiser le fichier de jeu
+ERR_CANNOT_LOCATE_FILE=Impossible de localiser le fichier
 ERR_FILTER_ALREADY_EXISTS=Nom de filtres existe déjà
 ERR_CANNOT_CONTACT_SERVER=Impossible de contacter le serveur
 ERR_CANNOT_INSTALL_NEW_UPDATED_FILES=L'installation a échoué
+ERR_INVALID_PATCH_FILE=Fichier correctif non valide
+ERR_FILE_TO_PATCH_NOT_PATCHABLE=Impossible d'appliquer le correctif au fichier
+ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Somme de contrôle incorrecte
+ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=Le fichier compressé ne peut pas être directement patché. Spécifiez un fichier de destination
+ERR_EMPTY_CHECKSUM=Le champ de somme de contrôle ne peut pas être vide
