--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_it_IT.properties
@@ -63,6 +63,8 @@ BACKUPS=Backup
 DELETE_CONFIRMATION=Elimina?
 ACTIVITY_VIEWER=Visualizzatore attività
 ACTIVITY_VIEWER_MNEMONIC=V
+PATCH_CENTER=Centro patch
+PATCH_CENTER_MNEMONIC=C
 COUNT=Totale
 
 BR=Brasile
@@ -97,7 +99,12 @@ ERR_GAME_WITH_NULL_NAME=Nome del gioco non può essere vuoto
 ERR_INVALID_MACHINES_DIRECTORY=Cartella di macchine non è valida
 ERR_CANNOT_VIEW_GAMEINFO=Visualizzazione dei dati di gioco fallito
 ERR_CANNOT_VIEW_HELP_FILE=Visualizzazione del file della guida fallito
-ERR_CANNOT_LOCATE_FILE=Visualizzazione del file del gioco fallito
+ERR_CANNOT_LOCATE_FILE=Impossibile trovare il file
 ERR_FILTER_ALREADY_EXISTS=Nome di filtri già esistente
 ERR_CANNOT_CONTACT_SERVER=Impossibile contattare il server
 ERR_CANNOT_INSTALL_NEW_UPDATED_FILES=Installazione non riuscita
+ERR_INVALID_PATCH_FILE=File di correzione non valido
+ERR_FILE_TO_PATCH_NOT_PATCHABLE=Impossibile applicare la patch al file
+ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Checksum errato
+ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=Il file compresso non può essere patchato direttamente. Specifica un file di destinazione
+ERR_EMPTY_CHECKSUM=Il campo di checksum non può essere vuoto
