--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_nl_NL.properties
@@ -63,6 +63,8 @@ BACKUPS=Back-ups
 DELETE_CONFIRMATION=Verwijderen?
 ACTIVITY_VIEWER=Activiteitenviewer
 ACTIVITY_VIEWER_MNEMONIC=A
+PATCH_CENTER=Patchcentrum
+PATCH_CENTER_MNEMONIC=P
 COUNT=Telling
 
 BR=Brazilië
@@ -97,7 +99,12 @@ ERR_GAME_WITH_NULL_NAME=Spel naam kan niet leeg zijn
 ERR_INVALID_MACHINES_DIRECTORY=Machines map is ongeldig
 ERR_CANNOT_VIEW_GAMEINFO=Fout bij het weergeven van spelgegevens
 ERR_CANNOT_VIEW_HELP_FILE=Fout bij het weergeven van help-bestand
-ERR_CANNOT_LOCATE_FILE=Fout bij het lokaliseren van spel-bestand
+ERR_CANNOT_LOCATE_FILE=Fout bij het lokaliseren van bestand
 ERR_FILTER_ALREADY_EXISTS=Filter naam bestaat al
 ERR_CANNOT_CONTACT_SERVER=Kan geen verbinding maken met de server
 ERR_CANNOT_INSTALL_NEW_UPDATED_FILES=De installatie is mislukt
+ERR_INVALID_PATCH_FILE=Ongeldig patchbestand
+ERR_FILE_TO_PATCH_NOT_PATCHABLE=Het bestand kan niet worden gecorrigeerd
+ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Onjuiste controlesom
+ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=Het gecomprimeerde bestand kan niet direct worden gepatcht. Geef een bestemming bestand
+ERR_EMPTY_CHECKSUM=De controlesom mag niet leeg zijn
