--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pl_PL.properties
@@ -63,6 +63,8 @@ BACKUPS=Kopie zapasowe
 DELETE_CONFIRMATION=Usun\u0105\u0107?
 ACTIVITY_VIEWER=Podgl\u0105d aktywno\u015Bci
 ACTIVITY_VIEWER_MNEMONIC=P
+PATCH_CENTER=Centrum poprawka
+PATCH_CENTER_MNEMONIC=C
 COUNT=Suma
 
 BR=Brazylia
@@ -97,7 +99,12 @@ ERR_GAME_WITH_NULL_NAME=Nazwa gry nie mo\u017Ce by\u0107 pusta
 ERR_INVALID_MACHINES_DIRECTORY=Nieprawid\u0142ow\u0105 komputerowy folder
 ERR_CANNOT_VIEW_GAMEINFO=Nie mo\u017Cna wy\u015Bwietli\u0107 informacje o gr\u0119
 ERR_CANNOT_VIEW_HELP_FILE=Nie znaleziono pliku pomocy
-ERR_CANNOT_LOCATE_FILE=Nie znaleziono pliku gry
+ERR_CANNOT_LOCATE_FILE=Nie znaleziono pliku
 ERR_FILTER_ALREADY_EXISTS=filtry nazwa ju\u017C istnieje
 ERR_CANNOT_CONTACT_SERVER=Nie mo\u017Cna uzyska\u0107 po\u0142\u0105czenia z serwerem
 ERR_CANNOT_INSTALL_NEW_UPDATED_FILES=Instalacja nie powiod\u0142a si\u0119
+ERR_INVALID_PATCH_FILE=Nieprawid\u0142owy plik poprawki
+ERR_FILE_TO_PATCH_NOT_PATCHABLE=Nie mo\u017Cna zastosowa\u0107 poprawk\u0119 do pliku
+ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Nieprawid\u0142owa suma kontrolna
+ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=Skompresowany plik nie mo\u017Ce by\u0107 poprawione bezpo\u015Brednio. Okre\u015Bli\u0107 plik docelowy
+ERR_EMPTY_CHECKSUM=Suma kontrolna nie mo\u017Ce by\u0107 pusty
