--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pt_BR.properties
@@ -63,6 +63,8 @@ BACKUPS=Backups
 DELETE_CONFIRMATION=Eliminar?
 ACTIVITY_VIEWER=Visualizador de Atividades
 ACTIVITY_VIEWER_MNEMONIC=V
+PATCH_CENTER=Centro de patch
+PATCH_CENTER_MNEMONIC=C
 COUNT=Total
 
 BR=Brasil
@@ -97,7 +99,12 @@ ERR_GAME_WITH_NULL_NAME=Nome de jogo não pode ser vazio
 ERR_INVALID_MACHINES_DIRECTORY=Pasta de máquinas é inválida
 ERR_CANNOT_VIEW_GAMEINFO=Não é possível exibir os dados de jogo
 ERR_CANNOT_VIEW_HELP_FILE=Não é possível exibir o arquivo de ajuda
-ERR_CANNOT_LOCATE_FILE=Não é possível localizar o arquivo do jogo
+ERR_CANNOT_LOCATE_FILE=Não é possível localizar o arquivo
 ERR_FILTER_ALREADY_EXISTS=Nome de filtros já existe
 ERR_CANNOT_CONTACT_SERVER=Não É Possível Contatar o Servidor
 ERR_CANNOT_INSTALL_NEW_UPDATED_FILES=Falha na instalação
+ERR_INVALID_PATCH_FILE=Arquivo de patch inválido
+ERR_FILE_TO_PATCH_NOT_PATCHABLE=O arquivo não pode ser corrigido
+ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Soma de verificação incorreta
+ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=O arquivo compactado não pode ser corrigido diretamente. Especifique um arquivo de destino
+ERR_EMPTY_CHECKSUM=Campo de soma de verificação não pode estar vazio
