--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_sv_SE.properties
@@ -63,6 +63,8 @@ BACKUPS=Säkerhetskopior
 DELETE_CONFIRMATION=Ta bort?
 ACTIVITY_VIEWER=Aktivitetsgranskaren
 ACTIVITY_VIEWER_MNEMONIC=A
+PATCH_CENTER=Korrigering-center
+PATCH_CENTER_MNEMONIC=K
 COUNT=Summa
 
 BR=Brasilien
@@ -97,7 +99,12 @@ ERR_GAME_WITH_NULL_NAME=Spelet namn kan inte vara tomt
 ERR_INVALID_MACHINES_DIRECTORY=Maskiner mapp är ogiltig
 ERR_CANNOT_VIEW_GAMEINFO=Misslyckades att visa spel info
 ERR_CANNOT_VIEW_HELP_FILE=Misslyckades att visa hjälpfil
-ERR_CANNOT_LOCATE_FILE=Misslyckades att lokalisera spelfilen
+ERR_CANNOT_LOCATE_FILE=Misslyckades att lokalisera filen
 ERR_FILTER_ALREADY_EXISTS=Filter namn finns redan
 ERR_CANNOT_CONTACT_SERVER=Det går inte att kontakta servern
 ERR_CANNOT_INSTALL_NEW_UPDATED_FILES=Installationen misslyckades
+ERR_INVALID_PATCH_FILE=Felaktig korrigeringsfil
+ERR_FILE_TO_PATCH_NOT_PATCHABLE=Filen kan inte korrigeras
+ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Felaktig kontrollsumma
+ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=Den komprimerade filen kan inte lagas direkt. Ange en destination fil
+ERR_EMPTY_CHECKSUM=Kontrollsumma fält får inte vara tomt
