--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_de_DE.properties
@@ -63,6 +63,8 @@ BACKUPS=Sicherungen
 DELETE_CONFIRMATION=Löschen?
 ACTIVITY_VIEWER=Aktivitätsanzeige
 ACTIVITY_VIEWER_MNEMONIC=A
+PATCH_CENTER=Patch-Center
+PATCH_CENTER_MNEMONIC=P
 COUNT=Gesamt
 
 BR=Brasilien
@@ -97,7 +99,12 @@ ERR_GAME_WITH_NULL_NAME=Spielname darf nicht leer sein
 ERR_INVALID_MACHINES_DIRECTORY=Machines Ordner ist ungültig
 ERR_CANNOT_VIEW_GAMEINFO=Fehler beim Anzeigen Spieldaten
 ERR_CANNOT_VIEW_HELP_FILE=Fehler beim Lesen der Hilfedatei
-ERR_CANNOT_LOCATE_FILE=Fehler beim Lokalisieren der Spiel-Datei
+ERR_CANNOT_LOCATE_FILE=Datei nicht gefunden
 ERR_FILTER_ALREADY_EXISTS=Filter Name existiert bereits
 ERR_CANNOT_CONTACT_SERVER=Mit dem Server kann keine Verbindung hergestellt werden
 ERR_CANNOT_INSTALL_NEW_UPDATED_FILES=Installationsfehler
+ERR_INVALID_PATCH_FILE=Ungültige Patchdatei
+ERR_FILE_TO_PATCH_NOT_PATCHABLE=Die Datei kann nicht korrigiert werden
+ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Falsche Prüfsumme
+ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=Die komprimierte Datei kann nicht direkt ausgebessert werden. Geben Sie eine Zieldatei
+ERR_EMPTY_CHECKSUM=Prüfsumme kann nicht leer sein
