--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ja_JP.properties
@@ -63,6 +63,8 @@ BACKUPS=\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7
 DELETE_CONFIRMATION=\u524A\u9664?
 ACTIVITY_VIEWER=\u6D3B\u52D5\u30D3\u30E5\u30FC\u30A2
 ACTIVITY_VIEWER_MNEMONIC=X
+PATCH_CENTER=\u30D1\u30C3\u30C1\u30BB\u30F3\u30BF\u30FC
+PATCH_CENTER_MNEMONIC=X
 COUNT=\u5408\u8A08
 
 BR=\u30D6\u30E9\u30B8\u30EB
@@ -97,7 +99,12 @@ ERR_GAME_WITH_NULL_NAME=\u30B2\u30FC\u30E0\u540D\u306F\u7A7A\u306B\u3059\u308B\u
 ERR_INVALID_MACHINES_DIRECTORY=\u30DE\u30B7\u30F3\u30D5\u30A9\u30EB\u30C0\u306F\u7121\u52B9\u3067\u3042\u308B
 ERR_CANNOT_VIEW_GAMEINFO=\u30B2\u30FC\u30E0\u30C7\u30FC\u30BF\u3092\u8868\u793A\u3057\u3066\u30A8\u30E9\u30FC\u304C\u767A\u751F\u3057\u307E\u3057\u305F
 ERR_CANNOT_VIEW_HELP_FILE=\u30D8\u30EB\u30D7 \u30D5\u30A1\u30A4\u30EB\u3092\u8868\u793A\u3067\u304D\u307E\u305B\u3093
-ERR_CANNOT_LOCATE_FILE=\u30A8\u30E9\u30FC\u306F\u30B2\u30FC\u30E0\u306E\u30D5\u30A1\u30A4\u30EB\u306E\u5834\u6240
+ERR_CANNOT_LOCATE_FILE=\u30D5\u30A1\u30A4\u30EB\u304C\u898B\u3064\u304B\u308A\u307E\u305B\u3093
 ERR_FILTER_ALREADY_EXISTS=\u30D5\u30A3\u30EB\u30BF\u540D\u306F\u3059\u3067\u306B\u5B58\u5728\u3057\u307E\u3059
 ERR_CANNOT_CONTACT_SERVER=\u30B5\u30FC\u30D0\u30FC\u306B\u30A2\u30AF\u30BB\u30B9\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F
 ERR_CANNOT_INSTALL_NEW_UPDATED_FILES=\u30A4\u30F3\u30B9\u30C8\u30FC\u30EB\u306E\u5931\u6557
+ERR_INVALID_PATCH_FILE=\u7121\u52B9\u306A\u30D1\u30C3\u30C1
+ERR_FILE_TO_PATCH_NOT_PATCHABLE=\u30D5\u30A1\u30A4\u30EB\u306B\u30D1\u30C3\u30C1\u3092\u9069\u7528\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F
+ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=\u6B63\u3057\u304F\u306A\u3044\u30C1\u30A7\u30C3\u30AF\u30B5\u30E0
+ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=\u5727\u7E2E\u3055\u308C\u305F\u30D5\u30A1\u30A4\u30EB\u306F\u3001\u76F4\u63A5\u30D1\u30C3\u30C1\u3092\u9069\u7528\u3059\u308B\u3053\u3068\u306F\u3067\u304D\u307E\u305B\u3093\u3002 \u5148\u306E\u30D5\u30A1\u30A4\u30EB\u3092\u6307\u5B9A\u3057\u307E\u3059
+ERR_EMPTY_CHECKSUM=\u30C1\u30A7\u30C3\u30AF\u30B5\u30E0\u3092\u7A7A\u306B\u3059\u308B\u3053\u3068\u306F\u3067\u304D\u307E\u305B\u3093
