--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ko_KR.properties
@@ -63,6 +63,8 @@ BACKUPS=\uBC31\uC5C5
 DELETE_CONFIRMATION=\uC0AD\uC81C?
 ACTIVITY_VIEWER=\uC791\uC5C5 \uBDF0\uC5B4
 ACTIVITY_VIEWER_MNEMONIC=X
+PATCH_CENTER=\uD328\uCE58 \uC13C\uD130
+PATCH_CENTER_MNEMONIC=X
 COUNT=\uCD1D\uACC4
 
 BR=\uBE0C\uB77C\uC9C8
@@ -97,7 +99,12 @@ ERR_GAME_WITH_NULL_NAME=\uAC8C\uC784 \uC774\uB984\uC740 \uBE44\uC6CC \uB458 \uC2
 ERR_INVALID_MACHINES_DIRECTORY=\uCEF4\uD4E8\uD130 \uD3F4\uB354\uAC00 \uC720\uD6A8\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4
 ERR_CANNOT_VIEW_GAMEINFO=\uAC8C\uC784\uC758 \uB370\uC774\uD130\uB97C \uD45C\uC2DC \uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4
 ERR_CANNOT_VIEW_HELP_FILE=\uB3C4\uC6C0\uB9D0 \uD30C\uC77C\uC744 \uD45C\uC2DC\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4
-ERR_CANNOT_LOCATE_FILE=\uC624\uB958\uAC00 \uAC8C\uC784 \uD30C\uC77C \uCC3E\uAE30
+ERR_CANNOT_LOCATE_FILE=\uD30C\uC77C\uC744 \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4
 ERR_FILTER_ALREADY_EXISTS=\uD544\uD130\uC758 \uC774\uB984\uC774 \uC774\uBBF8
 ERR_CANNOT_CONTACT_SERVER=\uC11C\uBC84\uC5D0 \uC5F0\uACB0\uD560 \uC218 \uC5C6\uC74C
 ERR_CANNOT_INSTALL_NEW_UPDATED_FILES=\uC124\uCE58 \uC2E4\uD328
+ERR_INVALID_PATCH_FILE=\uC798\uBABB\uB41C \uD328\uCE58
+ERR_FILE_TO_PATCH_NOT_PATCHABLE=\uD30C\uC77C\uC5D0 \uD328\uCE58\uB97C \uC801\uC6A9 \uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4
+ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=\uC798\uBABB\uB41C \uCCB4\uD06C\uC12C
+ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=\uC555\uCD95 \uB41C \uD30C\uC77C\uC740 \uC9C1\uC811 \uD328\uCE58 \uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4. \uB300\uC0C1 \uD30C\uC77C\uC744 \uC9C0\uC815\uD569\uB2C8\uB2E4
+ERR_EMPTY_CHECKSUM=\uCCB4\uD06C\uC12C\uC740 \uBE44\uC6CC \uB458 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4
