--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_CN.properties
@@ -63,6 +63,8 @@ BACKUPS=\u5907\u4EFD
 DELETE_CONFIRMATION=\u5220\u9664?
 ACTIVITY_VIEWER=\u6D3B\u52A8\u67E5\u770B\u5668
 ACTIVITY_VIEWER_MNEMONIC=X
+PATCH_CENTER=\u4FEE\u8865\u4E2D\u5FC3
+PATCH_CENTER_MNEMONIC=X
 COUNT=\u603B\u8BA1
 
 BR=\u5DF4\u897F
@@ -97,7 +99,12 @@ ERR_GAME_WITH_NULL_NAME=\u6E38\u620F\u540D\u5B57\u4E0D\u80FD\u4E3A\u7A7A
 ERR_INVALID_MACHINES_DIRECTORY=\u673A\u5668\u7684\u6587\u4EF6\u5939\u65E0\u6548
 ERR_CANNOT_VIEW_GAMEINFO=\u65E0\u6CD5\u67E5\u770B\u6E38\u620F\u4FE1\u606F
 ERR_CANNOT_VIEW_HELP_FILE=\u5E2E\u52A9\u6587\u4EF6\u8BFB\u53D6\u9519\u8BEF
-ERR_CANNOT_LOCATE_FILE=\u5B9A\u4F4D\u6E38\u620F\u6587\u4EF6\u65F6\u51FA\u9519
+ERR_CANNOT_LOCATE_FILE=\u627E\u4E0D\u5230\u6587\u4EF6
 ERR_FILTER_ALREADY_EXISTS=\u8FC7\u6EE4\u5668\u540D\u79F0\u5DF2\u7ECF\u5B58\u5728
 ERR_CANNOT_CONTACT_SERVER=\u65E0\u6CD5\u8054\u7CFB\u670D\u52A1\u5668
 ERR_CANNOT_INSTALL_NEW_UPDATED_FILES=\u5B89\u88C5\u5931\u8D25
+ERR_INVALID_PATCH_FILE=\u65E0\u6548\u7684\u8865\u7A0B\u5E8F\u6587\u4EF6
+ERR_FILE_TO_PATCH_NOT_PATCHABLE=\u65E0\u6CD5\u5C06\u4FEE\u8865\u7A0B\u5E8F\u5E94\u7528\u4E8E\u6587\u4EF6
+ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=\u4E0D\u6B63\u786E\u7684\u6821\u9A8C\u548C
+ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=\u8BE5\u538B\u7F29\u6587\u4EF6\u4E0D\u80FD\u76F4\u63A5\u6253\u8865\u4E01\u3002\u6307\u5B9A\u76EE\u6807\u6587\u4EF6
+ERR_EMPTY_CHECKSUM=\u603B\u548C\u68C0\u67E5\u7801\u680F\u4F4D\u4E0D\u80FD\u4E3A\u7A7A
