--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_TW.properties
@@ -63,6 +63,8 @@ BACKUPS=\u5099\u4EFD
 DELETE_CONFIRMATION=\u522A\u9664?
 ACTIVITY_VIEWER=\u6D3B\u52D5\u6AA2\u8996\u5668
 ACTIVITY_VIEWER_MNEMONIC=X
+PATCH_CENTER=\u4FEE\u88DC\u4E2D\u5FC3
+PATCH_CENTER_MNEMONIC=X
 COUNT=\u7E3D\u5171
 
 BR=\u5DF4\u897F
@@ -97,7 +99,12 @@ ERR_GAME_WITH_NULL_NAME=\u904A\u6232\u540D\u5B57\u4E0D\u80FD\u70BA\u7A7A
 ERR_INVALID_MACHINES_DIRECTORY=\u6A5F\u5668\u7684\u6587\u4EF6\u593E\u7121\u6548
 ERR_CANNOT_VIEW_GAMEINFO=\u7121\u6CD5\u67E5\u770B\u904A\u6232\u4FE1\u606F
 ERR_CANNOT_VIEW_HELP_FILE=\u7121\u6CD5\u958B\u555F\u8AAA\u660E\u6A94
-ERR_CANNOT_LOCATE_FILE=\u5B9A\u4F4D\u904A\u6232\u6587\u4EF6\u6642\u51FA\u932F
+ERR_CANNOT_LOCATE_FILE=\u627E\u4E0D\u5230\u6A94\u6848
 ERR_FILTER_ALREADY_EXISTS=\u904E\u6FFE\u5668\u540D\u7A31\u5DF2\u7D93\u5B58\u5728
 ERR_CANNOT_CONTACT_SERVER=\u7121\u6CD5\u9023\u7D61\u4F3A\u670D\u5668
 ERR_CANNOT_INSTALL_NEW_UPDATED_FILES=\u5B89\u88DD\u5931\u6557
+ERR_INVALID_PATCH_FILE=\u7121\u6548\u7684\u88DC\u7A0B\u5E8F\u6587\u4EF6
+ERR_FILE_TO_PATCH_NOT_PATCHABLE=\u7121\u6CD5\u5C07\u4FEE\u88DC\u7A0B\u5E8F\u61C9\u7528\u65BC\u6587\u4EF6
+ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=\u7121\u6548\u7684\u7E3D\u548C\u6AA2\u67E5\u78BC
+ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=\u8A72\u58D3\u7E2E\u6587\u4EF6\u4E0D\u80FD\u76F4\u63A5\u6253\u88DC\u4E01\u3002\u6307\u5B9A\u76EE\u6A19\u6587\u4EF6
+ERR_EMPTY_CHECKSUM=\u7E3D\u548C\u6AA2\u67E5\u78BC\u6B04\u4F4D\u4E0D\u80FD\u70BA\u7A7A
