added UPS patch support

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_ca_ES.properties
@@ -1,6 +1,9 @@
 INPUTS=Entrades
+METHOD=Mètode
+PATCH=Pedaç
 SOURCE=Origen
 VERIFY_CHECKSUM=Suma de comprovació
+SKIP_CRC=Omet la verificació de CRC
 OUTPUT=Sortida
 SPECIFY_LOCATION_PATCHED_FILE=Especifica lloc del fitxer apedaçat
 TARGET=Destinació
