--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_de_DE.properties
@@ -1,6 +1,9 @@
 INPUTS=Eingaben
+METHOD=Methode
+PATCH=Patch
 SOURCE=Quelle
 VERIFY_CHECKSUM=Prüfsumme überprüfen
+SKIP_CRC=Überprüfung CRC überspringen
 OUTPUT=Ausgabe
 SPECIFY_LOCATION_PATCHED_FILE=Speicherort des gepatchte Datei angeben
 TARGET=Ziel
