--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_fi_FI.properties
@@ -1,6 +1,9 @@
 INPUTS=Syöttö
+METHOD=Menetelmä
+PATCH=Korjaustiedosto
 SOURCE=Lähde
 VERIFY_CHECKSUM=Tarkista tarkistussumma
+SKIP_CRC=Ohita CRC-tarkistus
 OUTPUT=Tulos
 SPECIFY_LOCATION_PATCHED_FILE=Määritä uusi sijainti korjattu tiedosto
 TARGET=Kohde
