--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_nl_NL.properties
@@ -1,6 +1,9 @@
 INPUTS=Invoer
+METHOD=Methode
+PATCH=Patch
 SOURCE=Bron
 VERIFY_CHECKSUM=Controlesom controleren
+SKIP_CRC=CRC verificatie overslaan
 OUTPUT=Uitvoer
 SPECIFY_LOCATION_PATCHED_FILE=Specificeren nieuwe locatie van het gecorrigeerde bestand
 TARGET=Doel
