--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_sv_SE.properties
@@ -1,6 +1,9 @@
 INPUTS=Indata
+METHOD=Metod
+PATCH=Programfix
 SOURCE=Källa
 VERIFY_CHECKSUM=Verifiera kontrollsumma
+SKIP_CRC=Hoppa över CRC-verifiering
 OUTPUT=Utdata
 SPECIFY_LOCATION_PATCHED_FILE=Ange platsen för den korrigerade filen
 TARGET=Mål
