--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_zh_CN.properties
@@ -1,6 +1,9 @@
 INPUTS=\u8F93\u5165
+METHOD=\u65B9\u6CD5
+PATCH=\u4FEE\u8865\u7A0B\u5F0F
 SOURCE=\u6E90
 VERIFY_CHECKSUM=\u9A8C\u8BC1\u6821\u9A8C\u548C
+SKIP_CRC=\u8DF3\u8FC7 CRC \u9A8C\u8BC1
 OUTPUT=\u8F93\u51FA
 SPECIFY_LOCATION_PATCHED_FILE=\u6307\u5B9A\u4FEE\u6B63\u6587\u4EF6\u4E2D\u7684\u65B0\u4F4D\u7F6E
 TARGET=\u76EE\u6807
