--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_en_US.properties
@@ -1,6 +1,9 @@
 INPUTS=Inputs
+METHOD=Method
+PATCH=Patch
 SOURCE=Source
 VERIFY_CHECKSUM=Verify Checksum
+SKIP_CRC=Skip CRC Verification
 OUTPUT=Output
 SPECIFY_LOCATION_PATCHED_FILE=Specify location of patched file
 TARGET=Target
