--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_es_ES.properties
@@ -1,6 +1,9 @@
 INPUTS=Entradas
+METHOD=Método
+PATCH=Parche
 SOURCE=Origen
 VERIFY_CHECKSUM=Suma de comprobación
+SKIP_CRC=Omitir la verificación de CRC
 OUTPUT=Resultados
 SPECIFY_LOCATION_PATCHED_FILE=Especificar nuevo lugar del archivo parcheado
 TARGET=Destino
