--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_it_IT.properties
@@ -1,6 +1,9 @@
 INPUTS=Input
+METHOD=Metodo
+PATCH=Patch
 SOURCE=Originale
 VERIFY_CHECKSUM=Verifica checksum
+SKIP_CRC=Ignora verifica CRC
 OUTPUT=Output
 SPECIFY_LOCATION_PATCHED_FILE=Specifica ubicazione del file corretto
 TARGET=Destinazione
