--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_ja_JP.properties
@@ -1,6 +1,9 @@
 INPUTS=\u5165\u529B
+METHOD=\u65B9\u6CD5
+PATCH=\u30D1\u30C3\u30C1
 SOURCE=\u30BD\u30FC\u30B9
 VERIFY_CHECKSUM=\u30C1\u30A7\u30C3\u30AF\u30B5\u30E0\u306E\u78BA\u8A8D
+SKIP_CRC=CRC \u306E\u691C\u8A3C\u3092\u30B9\u30AD\u30C3\u30D7
 OUTPUT=\u51FA\u529B
 SPECIFY_LOCATION_PATCHED_FILE=\u4FEE\u6B63\u3057\u305F\u30D5\u30A1\u30A4\u30EB\u306E\u65B0\u3057\u3044\u5834\u6240\u3092\u6307\u5B9A\u3057\u307E\u3059
 TARGET=\u30BF\u30FC\u30B2\u30C3\u30C8
