--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_pl_PL.properties
@@ -1,6 +1,9 @@
 INPUTS=Dane wej\u015Bciowe
+METHOD=Metoda
+PATCH=\u0141atk\u0119
 SOURCE=\u0179ród\u0142o
 VERIFY_CHECKSUM=Weryfikuj suma kontrolna
+SKIP_CRC=Pomi\u0144 weryfikacj\u0119 CRC
 OUTPUT=Dane wyj\u015Bciowe
 SPECIFY_LOCATION_PATCHED_FILE=Okre\u015Bli\u0107 now\u0105 lokalizacj\u0119 poprawiony plik
 TARGET=Cel
