added visual busy indicator to patching

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_ca_ES.properties
@@ -10,3 +10,4 @@ TARGET=Destinació
 PATCH_DIRECTLY=Apedaça origin directament
 FILE_PATCHED_SUCCESSFULLY=Pedaç s'ha aplicat correctament
 CONFIRM_REPLACE_TARGET_FILE_MSG=El fitxer de destinació ja existeix. Voleu substituir el fitxer?
+PATCHING=S'estan apedaçant
