--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_en_US.properties
@@ -10,3 +10,4 @@ TARGET=Target
 PATCH_DIRECTLY=Patch source directly
 FILE_PATCHED_SUCCESSFULLY=Patch was applied successfully
 CONFIRM_REPLACE_TARGET_FILE_MSG=Target file already exists. Replace?
+PATCHING=Patching
