--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_es_ES.properties
@@ -10,3 +10,4 @@ TARGET=Destino
 PATCH_DIRECTLY=Parchear el origen directamente
 FILE_PATCHED_SUCCESSFULLY=El parche fue aplicado correctamente
 CONFIRM_REPLACE_TARGET_FILE_MSG=El archivo de destino ya existe. ¿Reemplazar archivo?
+PATCHING=Parcheando
