--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_fi_FI.properties
@@ -10,3 +10,4 @@ TARGET=Kohde
 PATCH_DIRECTLY=Käytä laastari suoraan lähteen
 FILE_PATCHED_SUCCESSFULLY=Korjaustiedosto asennetaan onnistuneesti
 CONFIRM_REPLACE_TARGET_FILE_MSG=Kohdetiedosto on jo olemassa. Korvataanko tiedosto?
+PATCHING=Korjaus käynnissä
