--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_fr_FR.properties
@@ -9,4 +9,5 @@ SPECIFY_LOCATION_PATCHED_FILE=Préciser le nouvel endroit du fichier corrigé
 TARGET=Cible
 PATCH_DIRECTLY=Appliquer le correctif sur la source directment
 FILE_PATCHED_SUCCESSFULLY=Correctif appliqué avec succès
-CONFIRM_REPLACE_TARGET_FILE_MSG=Le fichier cible existe déjà. Voulez-vous remplacer le fichier ?
+CONFIRM_REPLACE_TARGET_FILE_MSG=Le fichier cible existe déjà. Voulez-vous remplacer le fichier?
+PATCHING=Correction en cours
