--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_it_IT.properties
@@ -10,3 +10,4 @@ TARGET=Destinazione
 PATCH_DIRECTLY=Applica la patch direttamente all'originale
 FILE_PATCHED_SUCCESSFULLY=Patch applicato correttamente
 CONFIRM_REPLACE_TARGET_FILE_MSG=Il file di destinazione esiste già. Sostituire il file?
+PATCHING=Correzione in corso
