--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_nl_NL.properties
@@ -10,3 +10,4 @@ TARGET=Doel
 PATCH_DIRECTLY=Patchen op de bron direct
 FILE_PATCHED_SUCCESSFULLY=Patch toegepast zonder problemen
 CONFIRM_REPLACE_TARGET_FILE_MSG=Het doelbestand bestaat al. Bestand vervangen?
+PATCHING=Bezig met patchen
