--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_pl_PL.properties
@@ -10,3 +10,4 @@ TARGET=Cel
 PATCH_DIRECTLY=Zastosuj poprawk\u0119 do \u017Aród\u0142a bezpo\u015Brednio
 FILE_PATCHED_SUCCESSFULLY=Poprawka zosta\u0142 z powodzeniem zastosowany
 CONFIRM_REPLACE_TARGET_FILE_MSG=Ten plik docelowy ju\u017C istnieje. Zamieni\u0107 plik?
+PATCHING=Poprawianie jest w toku
