--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_pt_BR.properties
@@ -10,3 +10,4 @@ TARGET=Destino
 PATCH_DIRECTLY=Corrigir o arquivo diretamente
 FILE_PATCHED_SUCCESSFULLY=Patch foi aplicado com êxito
 CONFIRM_REPLACE_TARGET_FILE_MSG=O arquivo de destino já existe. Substituir arquivo?
+PATCHING=Corrigindo
