--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_sv_SE.properties
@@ -10,3 +10,4 @@ TARGET=Mål
 PATCH_DIRECTLY=Korrigera filen direkt
 FILE_PATCHED_SUCCESSFULLY=Korrigering tillämpad framgångsrikt
 CONFIRM_REPLACE_TARGET_FILE_MSG=Målfilen finns redan. Vill du ersätta filen?
+PATCHING=Patching pågår
