--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_zh_TW.properties
@@ -10,3 +10,4 @@ TARGET=\u76EE\u6A19
 PATCH_DIRECTLY=\u88DC\u4E01\u76F4\u63A5\u8D77\u6E90
 FILE_PATCHED_SUCCESSFULLY=\u8A72\u88DC\u4E01\u5DF2\u6210\u529F\u61C9\u7528
 CONFIRM_REPLACE_TARGET_FILE_MSG=\u76EE\u6A19\u6A94\u6848\u5DF2\u5B58\u5728\u3002\u53D6\u4EE3\u6A94\u6848?
+PATCHING=\u6B63\u5728\u9032\u884C\u4FEE\u88DC
