--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_de_DE.properties
@@ -10,3 +10,4 @@ TARGET=Ziel
 PATCH_DIRECTLY=Quelle direkt patchen
 FILE_PATCHED_SUCCESSFULLY=Patch wurde erfolgreich übernommen
 CONFIRM_REPLACE_TARGET_FILE_MSG=Die Zieldatei ist bereits vorhanden. Datei ersetzen?
+PATCHING=Patchen im Gange
