--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_ja_JP.properties
@@ -10,3 +10,4 @@ TARGET=\u30BF\u30FC\u30B2\u30C3\u30C8
 PATCH_DIRECTLY=\u30D1\u30C3\u30C1\u306E\u8D77\u6E90\u3092\u76F4\u63A5
 FILE_PATCHED_SUCCESSFULLY=\u30D1\u30C3\u30C1\u304C\u6B63\u5E38\u306B\u9069\u7528\u3055\u30CF\u30E0\u30AA\u30C8\u305F
 CONFIRM_REPLACE_TARGET_FILE_MSG=\u30D5\u30A1\u30A4\u30EB\u306F\u65E2\u306B\u5B58\u5728\u3057\u307E\u3059\u3002\u30D5\u30A1\u30A4\u30EB\u3092\u7F6E\u304D\u63DB\u3048\u307E\u3059\u304B?
+PATCHING=\u9032\u884C\u4E2D\u306E\u30D1\u30C3\u30C1\u9069\u7528
