--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_ko_KR.properties
@@ -10,3 +10,4 @@ TARGET=\uB300\uC0C1
 PATCH_DIRECTLY=\uC6D0\uBCF8\uC5D0 \uC9C1\uC811 \uD328\uCE58\uB97C \uC801\uC6A9
 FILE_PATCHED_SUCCESSFULLY=\uD328\uCE58\uAC00 \uC131\uACF5\uC801\uC73C\uB85C \uC801\uC6A9\uD568\uC5C8\uC2B5\uB2C8\uB2E4
 CONFIRM_REPLACE_TARGET_FILE_MSG=\uB300\uC0C1 \uD30C\uC77C\uC774 \uC774\uBBF8 \uC788\uC2B5\uB2C8\uB2E4. \uD30C\uC77C\uC744 \uBC14\uAFC0\uAE4C\uC694?
+PATCHING=\uC9C4\uD589 \uD328\uCE58
