--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/PatcherWindow_zh_CN.properties
@@ -10,3 +10,4 @@ TARGET=\u76EE\u6807
 PATCH_DIRECTLY=\u8865\u4E01\u76F4\u63A5\u8D77\u6E90
 FILE_PATCHED_SUCCESSFULLY=\u8BE5\u8865\u4E01\u5DF2\u6210\u529F\u5E94\u7528
 CONFIRM_REPLACE_TARGET_FILE_MSG=\u76EE\u6807\u6587\u4EF6\u5DF2\u5B58\u5728\u3002\u66FF\u6362\u6587\u4EF6\u5417?
+PATCHING=\u6B63\u5728\u8FDB\u884C\u4FEE\u8865
